NZ: Added job at Georgia Tech

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -6,3 +6,7 @@
   location: University Park Campus
   url: https://psu.jobs/job/88890
   expires: 2019-09-01
+- name: "Research Scientist"
+  location: Georgia Institute of Technology (remote could be an option)
+  url: https://pace.gatech.edu/software-and-collaboration-support-team-member-research-scientist
+  expires: 2019-09-01
